# sptk

./: .cvsignore  README  README.jp
doc/ref/: Makefile  acep.tex  acorr.tex  agcep.tex  amcep.tex  average.tex  b2mc.tex  bcp.tex  bcut.tex  bell.tex  c2acr.tex  c2ir.tex  c2sp.tex  cat2.tex  ccp.tex  cdist.tex  clip.tex  cmndref.sty  da.tex  daplay.tex  dawrite.tex  decimate.tex  delay.tex  df2.tex  dfs.tex  dmp.tex  ds.tex  echo2.tex  excite.tex  extract.tex  fd.tex  fdrw.tex  fft.tex  fft2.tex  fftcep.tex  fftr.tex  fftr2.tex  fig.tex  frame.tex  freqt.tex  (+83 more)
doc/ref/fig/: bcp.eps  box.eps  circle.eps  df2.eps  fft2-comp.eps  fft2-trans.eps  fft2.eps  fig-print1.eps  g1.eps  glogsp-sample.eps  grid.eps  ifft.eps  ifft2.eps  mark.eps  merge.eps  paint.eps
doc/ref_e/: .cvsignore  Makefile  Makefile.in  acep.tex  acorr.tex  acr2csm.tex  agcep.tex  amcep.tex  appendix.tex  average.tex  b2mc.tex  bcp.tex  bcut.tex  bell.tex  bmdefines.tex  c2acr.tex  c2ir.tex  c2ndps.tex  c2sp.tex  cat2.tex  ccp.tex  cdist.tex  clip.tex  cmndref.sty  configure  configure.ac  csm2acr.tex  csm2lpc.tex  da.tex  dawrite.tex  dct.tex  decimate.tex  delay.tex  delta.tex  df2.tex  dfs.tex  dmp.tex  ds.tex  dtw.tex  echo2.tex  (+120 more)
doc/ref_e/fig/: FIRflt.eps  GMM_1.eps  GMM_2.eps  GMM_3.eps  GMM_4.eps  clip.eps  dct.eps  fft2-quad.eps  fft2.eps  fftr2.eps  fig-print2.eps  g0.eps  g2.eps  glogsp-on.eps  grlogsp-on.eps  idct.eps  ifft.eps  ifft2.eps  join-type.eps  lbg_step0.eps  lbg_step1.eps  lbg_step2.eps  path1.eps  path2.eps  path3.eps  path4.eps  path5.eps  path6.eps  path7.eps  pen-line.eps  scale.eps  sptk_sigproc.dia  sptk_sigproc.eps  transflt.eps
examples/data/: data.short  sample.pitch
examples/doc/: .cvsignore  data.lpc.glogsp.eps  data.lpc.grlogsp.eps  data.lpc.syn.gwave.eps  data.lsp.syn.gwave.eps  data.mcep.vq.syn.gwave.eps  data.mgcep.glogsp.eps  data.mgcep.grlogsp.eps  examples.tex  sample.mcep.grlogsp-t.eps  sample.mcep.syn.gwave.eps  sample.mcep.wo-dyn.grlogsp-t.eps
examples/doc/eps/: data.all.mcep.grlogsp.eps  data.bcut.gwave.eps  data.gwave.eps  data.lpc.glogsp.eps  data.lpc.grlogsp.eps  data.lpc.syn.gwave.eps  data.lsp.syn.gwave.eps  data.mcep.glogsp.eps  data.mcep.grlogsp-t.eps  data.mcep.grlogsp.eps  data.mcep.syn.gwave.eps  data.mcep.vq.grlogsp.eps  data.mcep.vq.syn.gwave.eps  data.mgcep.glogsp.eps  data.mgcep.grlogsp.eps  data.mgcep.syn.gwave.eps  data.par.syn.gwave.eps  data.pitch.fdrw.eps  sample.mcep.grlogsp-t.eps  sample.mcep.syn.gwave.eps  sample.mcep.wo-dyn.grlogsp-t.eps  sample.mcep.wo-dyn.syn.gwave.eps
htdocs/: .cvsignore  .htaccess  default.css  index.html  mailto.php  readme.php
makedist/: Makefile  cp-tex-e.pl  cp-tex.pl  create-dist.sh  create-snap.sh  list.all  list.release  tex-files-e.extra  tex-files.extra
src/: .cvsignore  AUTHORS  COPYING  ChangeLog  INSTALL  Makefile  Makefile.am  Makefile.in  Makefile.mak  NEWS  README  configure  configure.ac
src/include/: Makefile  Makefile.am  Makefile.in  Makefile.mak  SPTK.h
src/lib/: .cvsignore  Makefile  Makefile.am  Makefile.in  Makefile.lib  Makefile.lib.in  Makefile.mak  agexp.c  cholesky.c  fileio.c  fillz.c  getfp.c  getmem.c  gexp.c  glog.c  ifftr.c  invert.c  matrix.c  movem.c  mseq.c  theq.c  toeplitz.c
src/script/: .cvsignore  Makefile  Makefile.am  Makefile.in  bell.in  bell.sh  daplay.sh  gimp.in  glogsp.in  glogsp.sh  grlogsp.in  grlogsp.sh  gseries.in  gwave.in  gwave.sh  mgc2mgclsp.in  mgclsp2mgc.in  raw2wav.in  wav2raw.in
