AM_CPPFLAGS = -I @top_srcdir@/include
lib_LIBRARIES = libSPTK.a
libSPTK_a_SOURCES = agexp.c \
	      cholesky.c \
	      fileio.c \
	      fillz.c \
	      getfp.c \
	      getmem.c \
	      gexp.c \
	      glog.c \
	      invert.c \
	      matrix.c \
	      movem.c \
	      mseq.c \
	      theq.c \
	      toeplitz.c

nodist_libSPTK_a_SOURCES = ../include/SPTK.h \
		../bin/acep/_acep.c \
		../bin/acorr/_acorr.c \
		../bin/agcep/_agcep.c \
		../bin/amcep/_amcep.c \
		../bin/average/_average.c \
		../bin/b2mc/_b2mc.c \
		../bin/c2acr/_c2acr.c \
		../bin/c2ir/_c2ir.c \
		../bin/c2sp/_c2sp.c \
		../bin/clip/_clip.c \
		../bin/dct/_dct.c \
		../bin/df2/_df2.c \
		../bin/dfs/_dfs.c \
		../bin/fft/_fft.c \
		../bin/fft2/_fft2.c \
		../bin/fftcep/_fftcep.c \
		../bin/fftr/_fftr.c \
		../bin/fftr2/_fftr2.c \
		../bin/freqt/_freqt.c \
		../bin/gc2gc/_gc2gc.c \
		../bin/gcep/_gcep.c \
		../bin/glsadf/_glsadf.c \
		../bin/gmm/_gmm.c \
		../bin/gnorm/_gnorm.c \
		../bin/grpdelay/_grpdelay.c \
		../bin/histogram/_histogram.c \
		../bin/ifft/_ifft.c \
		../bin/ifftr/_ifftr.c \
		../bin/ifft2/_ifft2.c \
		../bin/ignorm/_ignorm.c \
		../bin/imsvq/_imsvq.c \
		../bin/ivq/_ivq.c \
		../bin/lbg/_lbg.c \
		../bin/levdur/_levdur.c \
		../bin/lmadf/_lmadf.c \
		../bin/lpc/_lpc.c \
		../bin/lpc2c/_lpc2c.c \
		../bin/lpc2lsp/_lpc2lsp.c \
		../bin/lpc2par/_lpc2par.c \
		../bin/lsp2lpc/_lsp2lpc.c \
		../bin/lsp2sp/_lsp2sp.c \
		../bin/lspcheck/_lspcheck.c \
		../bin/lspdf/_lspdf.c \
		../bin/ltcdf/_ltcdf.c \
		../bin/mc2b/_mc2b.c \
		../bin/mcep/_mcep.c \
		../bin/mfcc/_mfcc.c \
		../bin/mgc2mgc/_mgc2mgc.c \
		../bin/mgc2sp/_mgc2sp.c \
		../bin/mgcep/_mgcep.c \
		../bin/mglsadf/_mglsadf.c \
		../bin/mlpg/_mlpg.c \
		../bin/mlsadf/_mlsadf.c \
		../bin/msvq/_msvq.c \
		../bin/norm0/_norm0.c \
		../bin/nrand/_nrand.c \
		../bin/par2lpc/_par2lpc.c \
		../bin/phase/_phase.c \
		../bin/poledf/_poledf.c \
		../bin/reverse/_reverse.c \
		../bin/rmse/_rmse.c \
		../bin/root_pol/_root_pol.c \
		../bin/smcep/_smcep.c \
		../bin/transpose/_transpose.c \
		../bin/uels/_uels.c \
		../bin/ulaw/_ulaw.c \
		../bin/vc/_vc.c \
		../bin/vq/_vq.c \
		../bin/wavjoin/_wavjoin.c \
		../bin/wavsplit/_wavsplit.c \
		../bin/window/_window.c \
		../bin/zcross/_zcross.c \
		../bin/zerodf/_zerodf.c
